--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <!-- 헤더 로고 -->
             <span class="logo">
                 <a href="#">
-                    <img src="../IMG/logo.png" alt="Logo">
+                    <img src="IMG/logo.png" alt="Logo">
                 </a>
             </span>
             <!-- 헤더 네비게이션 -->
@@ -49,7 +49,7 @@
             <!-- 헤더 배너 -->
             <span class="sms">
                 <a href="#">
-                    <img src="../IMG/banner.png" alt="pms">
+                    <img src="IMG/banner.png" alt="pms">
                 </a>
             </span>
         </section>
@@ -58,25 +58,25 @@
                 <ul class="contents">
                     <li>
                         <a href="#">
-                            <img src="../IMG/M1.png" alt="C1">
+                            <img src="IMG/M1.png" alt="C1">
                             <div>펜타코드는?</div>
                         </a>
                     </li>
                     <li>
                         <a href="#">
-                            <img src="../IMG/M2.png" alt="C1">
+                            <img src="IMG/M2.png" alt="C1">
                             <div>조직</div>
                         </a>
                     </li>
                     <li>
                         <a href="#">
-                            <img src="../IMG/M3.png" alt="C1">
+                            <img src="IMG/M3.png" alt="C1">
                             <div>오시는 길</div>
                         </a>
                     </li>
                     <li>
                         <a href="#">
-                            <img src="../IMG/M4.png" alt="C1">
+                            <img src="IMG/M4.png" alt="C1">
                             <div>문의</div>
                         </a>
                     </li>
@@ -86,19 +86,19 @@
                 <ul class="contents">
                     <li>
                         <a href="#">
-                            <img src="../IMG/M5.png" alt="C1">
+                            <img src="IMG/M5.png" alt="C1">
                             <div>사업분야</div>
                         </a>
                     </li>
                     <li>
                         <a href="#">
-                            <img src="../IMG/M6.png" alt="C1">
+                            <img src="IMG/M6.png" alt="C1">
                             <div>경험</div>
                         </a>
                     </li>
                     <li>
                         <a href="#">
-                            <img src="../IMG/M7.png" alt="C1">
+                            <img src="IMG/M7.png" alt="C1">
                             <div>고객사</div>
                         </a>
                     </li>
@@ -108,19 +108,19 @@
                 <ul class="contents">
                     <li>
                         <a href="#">
-                            <img src="../IMG/M8.png" alt="C1">
+                            <img src="IMG/M8.png" alt="C1">
                             <div>소식</div>
                         </a>
                     </li>
                     <li>
                         <a href="#">
-                            <img src="../IMG/M9.png" alt="C1">
+                            <img src="IMG/M9.png" alt="C1">
                             <div>펜타SNS</div>
                         </a>
                     </li>
                     <li>
                         <a href="#">
-                            <img src="../IMG/M11.png" alt="C1">
+                            <img src="IMG/M11.png" alt="C1">
                             <div>갤러리</div>
                         </a>
                     </li>
@@ -130,13 +130,13 @@
                 <ul class="contents">
                     <li>
                         <a href="#">
-                            <img src="../IMG/M12.png" alt="C1">
+                            <img src="IMG/M12.png" alt="C1">
                             <div>K웨비나</div>
                         </a>
                     </li>
                     <li>
                         <a href="#">
-                            <img src="../IMG/M13.png" alt="C1">
+                            <img src="IMG/M13.png" alt="C1">
                             <div>큐트러스트SSL</div>
                         </a>
                     </li>
@@ -149,7 +149,7 @@
     <main>
         <!-- Visual -->
         <section class="visual">
-            <img src="../IMG/Visual.png" alt="Visual">
+            <img src="IMG/Visual.png" alt="Visual">
             <div class="sc">
                 <h1>Scroll</h1>
                 <div class="bar">
@@ -170,25 +170,25 @@
                 <div class="top">
                     <li>
                         <a href="#">
-                            <img src="../IMG/i1.png" alt="i1">
+                            <img src="IMG/i1.png" alt="i1">
                             <p>스타트업파크,품(POOM)플랫폼 구축 사업</p>
                         </a>
                     </li>
                     <li>
                         <a href="#">
-                            <img src="../IMG/i2.png" alt="i1">
+                            <img src="IMG/i2.png" alt="i1">
                             <p>미추홀구 홈페이지 전면 개편</p>
                         </a>
                     </li>
                     <li>
                         <a href="#">
-                            <img src="../IMG/i3.png" alt="i1">
+                            <img src="IMG/i3.png" alt="i1">
                             <p>근로복지넷 위탁 운영</p>
                         </a>
                     </li>
                     <li>
                         <a href="#">
-                            <img src="../IMG/i4.png" alt="i1">
+                            <img src="IMG/i4.png" alt="i1">
                             <p>머신러닝 기반 간편 주소관리 서비스 구축</p>
                         </a>
                     </li>
@@ -197,25 +197,25 @@
                 <div class="bottom">
                     <li>
                         <a href="#">
-                            <img src="../IMG/i5.png" alt="i1">
+                            <img src="IMG/i5.png" alt="i1">
                             <p>켄트대학교 온라인입학지원 홈페이지 구축</p>
                         </a>
                     </li>
                     <li>
                         <a href="#">
-                            <img src="../IMG/i6.png" alt="i1">
+                            <img src="IMG/i6.png" alt="i1">
                             <p>(재)영수문화재단 홈페이지 제작</p>
                         </a>
                     </li>
                     <li>
                         <a href="#">
-                            <img src="../IMG/i7.png" alt="i1">
+                            <img src="IMG/i7.png" alt="i1">
                             <p>인천 VR · AR 제작거점센터 정보포털 구축 및 운영</p>
                         </a>
                     </li>
                     <li>
                         <a href="#">
-                            <img src="../IMG/i8.png" alt="i1">
+                            <img src="IMG/i8.png" alt="i1">
                             <p>인천 콘텐츠기업지원센터 홈페이지 및 인포메이션 시스템 구축</p>
                         </a>
                     </li>
@@ -230,7 +230,7 @@
                     <a href="#">
                         <div class="ig">
                             <div class="cursor"></div>
-                            <img src="../IMG/q1.png" alt="I!">
+                            <img src="IMG/q1.png" alt="I!">
                         </div>
                         <div class="des">
                             <h3>환경 비즈니스 빅데이터 플랫폼 - 제10회 모···</h3>
@@ -246,7 +246,7 @@
                     <a href="#">
                         <div class="ig">
                             <div class="cursor"></div>
-                            <img src="../IMG/q2.png" alt="I@">
+                            <img src="IMG/q2.png" alt="I@">
                         </div>
                         <div class="des">
                             <h3>펜타코드가 인천광역시장 표창장을 받았습니다.</h3>
@@ -262,7 +262,7 @@
                     <a href="#">
                         <div class="ig">
                             <div class="cursor"></div>
-                            <img src="../IMG/q3.jpg" alt="I#">
+                            <img src="IMG/q3.jpg" alt="I#">
                         </div>
                         <div class="des">
                             <h3>[공고[]AI모델 자동생성시스템 외 환경플랫폼···</h3>
@@ -300,19 +300,19 @@
             <h6 class="HHH">instargram</h6>
             <ul class="images">
                 <li><a href="#">
-                        <img src="../IMG/p1.png" alt="">
+                        <img src="IMG/p1.png" alt="">
                     </a></li>
                 <li><a href="#">
-                        <img src="../IMG/p2.png" alt="">
+                        <img src="IMG/p2.png" alt="">
                     </a></li>
                 <li><a href="#">
-                        <img src="../IMG/p3.png" alt="">
+                        <img src="IMG/p3.png" alt="">
                     </a></li>
                 <li><a href="#">
-                        <img src="../IMG/p4.png" alt="">
+                        <img src="IMG/p4.png" alt="">
                     </a></li>
                 <li><a href="#">
-                        <img src="../IMG/p5.png" alt="">
+                        <img src="IMG/p5.png" alt="">
                     </a></li>
             </ul>
         </section>
