--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
             </div>
         </section>
     </footer>
-    <script src="../JS/index.js"></script>
+    <script src="JS/index.js"></script>
 </body>
 
 </html>
